# qmt

./: .gitignore  QMT_打板.py  README.md  backtest.py  backtest_data_feed.py  backtrader_strategy.py  config.py  data_fetcher.py  data_generator.py  data_preprocessor.py  download_data.py  factor_library.py  get_market_cap.py  get_sector_info.py  main.py  pyproject.toml  qmt_data_fetcher.py  qmt策略.ipynb  quote.py  requirements.txt  run_pipeline.py  strategy.py  test_data_feed.py  trade_interface.py  utils.py  打板思路.txt  打板策略.py  模拟.ipynb
backtest/: backtrader_interface.py
config/: settings.py
core/: data_feed.py  factor_library.py  strategy.py  trade_interface.py
data/datadir/SectorData/latest/: HA股.fe
feed/: qmt_feed.py
interfaces/qmt/: data_feed.py
strategies/: __init__.py  scalping.py  sector_chase.py
strategies/futures/: __init__.py  dollar_bar.py
strategies/pipeline/: _01_data_processor.py  _02_factor_builder.py  _03_feature_selector.py  _04_model_trainer.py  _05_model_evaluator.py  _06_predictor.py  _07_pipeline.py  __init__.py  pipeline.py
trading/: qmt_trade.py
utils/: utils.py
