[project]
name = "qmt"
version = "0.1.0"
description = "量化交易项目"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=0.24.0",
    "xtquant",
    "backtrader>=1.9.76.123",
    "matplotlib>=3.5.1",
    "seaborn>=0.11.2",
    "xgboost>=2.1.4",
    "lightgbm>=4.6.0",
] 
